--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@iconify/react": "^4.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
