--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
