--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "dayjs": "^1.11.10",
+    "lottie-react": "^2.4.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
